[package]
name = "tilemap_test"
version = "0.1.0"
authors = ["a"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# switch to 3.0 bindings
raylib = {version="1.1.0", path = "./raylib"}
# raylib-sys = {version="1.1.0", path="./raylib-sys"}

#switch back to 2.6 bindings:
# raylib = { git = "https://github.com/deltaphc/raylib-rs", branch = "master" }
